svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
  labels:
    app: httpd-example
    template: httpd-example
    template.openshift.io/template-instance-owner: 41033e1d-4cde-4b00-bd4c-43d89d158608
  name: httpd
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: web
    port: 8080
  selector:
    name: httpd
